--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 numpy==1.19.5
 pandas==1.2.1
 cycler==0.10.0
-kiwisolver=1.3.1
-matplotlib=3.3.4
-pillow=8.1.0
+kiwisolver==1.3.1
+matplotlib==3.3.4
+pillow==8.1.0
+scipy==1.6.0
+seaborn==0.11.1
