--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ seaborn==0.11.1
 joblib==1.0.0
 scikit-learn==0.24.1
 threadpoolctl==2.1.0
+
+#this is a downgrade due to fbprophet
+convertdate==2.2.0
