--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
-numpy==1.19.5
-pandas==1.2.1
-cycler==0.10.0
-kiwisolver==1.3.1
-matplotlib==3.3.4
-pillow==8.1.0
-scipy==1.6.0
-seaborn==0.11.1
-joblib==1.0.0
-scikit-learn==0.24.1
-threadpoolctl==2.1.0
+#numpy==1.19.5
+#pandas==1.2.1
+#cycler==0.10.0
+#kiwisolver==1.3.1
+#matplotlib==3.3.4
+#pillow==8.1.0
+#scipy==1.6.0
+#seaborn==0.11.1
+#joblib==1.0.0
+#scikit-learn==0.24.1
+#threadpoolctl==2.1.0
 
 #this is a downgrade due to fbprophet
 #convertdate==2.2.0
 #lunarcalendar is not found
 #which fbprophet version?
+
+numpy==1.18.1
+pandas==0.25.3
+cycler==0.10.0
+matplotlib==2.0.0
+scipy==1.2.0
+seaborn==0.8.0
+scikit-learn==0.22.1
