--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,11 @@
 #lunarcalendar is not found
 #which fbprophet version?
 
-numpy==1.18.1
-pandas==0.25.3
-cycler==0.10.0
-matplotlib==2.0.0
-scipy==1.2.0
-seaborn==0.8.0
-scikit-learn==0.22.1
+#evgenios
+#numpy==1.18.1
+#pandas==0.25.3
+#cycler==0.10.0
+#matplotlib==2.0.0
+#scipy==1.2.0
+#seaborn==0.8.0
+#scikit-learn==0.22.1
