--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,11 @@
 #which fbprophet version?
 
 #evgenios
-#numpy==1.18.1
-#pandas==0.25.3
-#cycler==0.10.0
-#matplotlib==2.0.0
-#scipy==1.2.0
-#seaborn==0.8.0
-#scikit-learn==0.22.1
+numpy==1.18.1
+pandas==0.25.3
+cycler==0.10.0
+matplotlib==2.0.0
+scipy==1.2.0
+seaborn==0.8.0
+scikit-learn==0.22.1
+fb_prophet==0.5
